syntax = "proto3";
package drips;

option go_package = "github.com/mathyourlife/drips/proto";

service DripsService {
    rpc Exercise(ExerciseRequest) returns (ExerciseResponse);
    rpc Exercises(ExercisesRequest) returns (ExercisesResponse);
    rpc ExerciseCreate(ExerciseCreateRequest) returns (ExerciseCreateResponse);
    rpc ExerciseDelete(ExerciseDeleteRequest) returns (ExerciseDeleteResponse);

    rpc ExerciseClass(ExerciseClassRequest) returns (ExerciseClassResponse);
    rpc ExerciseClasses(ExerciseClassesRequest) returns (ExerciseClassesResponse);
    rpc ExerciseClassCreate(ExerciseClassCreateRequest) returns (ExerciseClassCreateResponse);
    rpc ExerciseClassDelete(ExerciseClassDeleteRequest) returns (ExerciseClassDeleteResponse);

    rpc ExerciseModifier(ExerciseModifierRequest) returns (ExerciseModifierResponse);
    rpc ExerciseModifiers(ExerciseModifiersRequest) returns (ExerciseModifiersResponse);
    rpc ExerciseModifierCreate(ExerciseModifierCreateRequest) returns (ExerciseModifierCreateResponse);
    rpc ExerciseModifierDelete(ExerciseModifierDeleteRequest) returns (ExerciseModifierDeleteResponse);

    rpc Modifier(ModifierRequest) returns (ModifierResponse);
    rpc Modifiers(ModifiersRequest) returns (ModifiersResponse);
    rpc ModifierCreate(ModifierCreateRequest) returns (ModifierCreateResponse);
    rpc ModifierDelete(ModifierDeleteRequest) returns (ModifierDeleteResponse);

    rpc Routine(RoutineRequest) returns (RoutineResponse);
    rpc Routines(RoutinesRequest) returns (RoutinesResponse);
    rpc RoutineCreate(RoutineCreateRequest) returns (RoutineCreateResponse);
    rpc RoutineDelete(RoutineDeleteRequest) returns (RoutineDeleteResponse);

    rpc User(UserRequest) returns (UserResponse);
    rpc Users(UsersRequest) returns (UsersResponse);
    rpc UserCreate(UserCreateRequest) returns (UserCreateResponse);
    rpc UserDelete(UserDeleteRequest) returns (UserDeleteResponse);
    rpc UserUpdate(UserUpdateRequest) returns (UserUpdateResponse);
}

message ExerciseRequest {
    int32 exercise_id = 1;
}
message ExerciseResponse {
    Exercise exercise = 1;
}
message ExercisesRequest {
}
message ExercisesResponse {
    repeated Exercise exercises = 1;
}
message ExerciseCreateRequest {
    Exercise exercise = 1;
}
message ExerciseCreateResponse {
    Exercise exercise = 1;
}
message ExerciseDeleteRequest {
    int32 exercise_id = 1;
}
message ExerciseDeleteResponse {
}

message Exercise {
    int32 exercise_id = 1;
    int32 exercise_class_id = 2;
    int32 duration_seconds = 3;
    int32 rest_seconds = 4;
    int32 repeat = 5;
    string name = 6;
}

message ExerciseClassRequest {
    int32 exercise_class_id = 1;
}
message ExerciseClassResponse {
    ExerciseClass exercise_class = 1;
}
message ExerciseClassesRequest {
}
message ExerciseClassesResponse {
    repeated ExerciseClass exercise_classes = 1;
}
message ExerciseClassCreateRequest {
    ExerciseClass exercise_class = 1;
}
message ExerciseClassCreateResponse {
    ExerciseClass exercise_class = 1;
}
message ExerciseClassDeleteRequest {
    int32 exercise_class_id = 1;
}
message ExerciseClassDeleteResponse {
}

message ExerciseClass {
    int32 exercise_class_id = 1;
    string name = 2;
    string short_name = 3;
}

message ExerciseModifierRequest {
    int32 exercise_modifier_id = 1;
}
message ExerciseModifierResponse {
    ExerciseModifier exercise_modifier = 1;
}
message ExerciseModifiersRequest {
    int32 exercise_id = 1;
}
message ExerciseModifiersResponse {
    repeated ExerciseModifier exercise_modifiers = 1;
}
message ExerciseModifierCreateRequest {
    ExerciseModifier exercise_modifier = 1;
}
message ExerciseModifierCreateResponse {
    ExerciseModifier exercise_modifier = 1;
}
message ExerciseModifierDeleteRequest {
    int32 exercise_modifier_id = 1;
}
message ExerciseModifierDeleteResponse {
}

message ExerciseModifier {
    int32 exercise_modifier_id = 1;
    int32 exercise_id = 2;
    int32 modifier_id = 3;
}

message ModifierRequest {
    int32 modifier_id = 1;
}
message ModifierResponse {
    Modifier modifier = 1;
}
message ModifiersRequest {
}
message ModifiersResponse {
    repeated Modifier modifiers = 1;
}
message ModifierCreateRequest {
    Modifier modifier = 1;
}
message ModifierCreateResponse {
    Modifier modifier = 1;
}
message ModifierDeleteRequest {
    int32 modifier_id = 1;
}
message ModifierDeleteResponse {
}

message Modifier {
    int32 modifier_id = 1;
    string name = 2;
}

message RoutineRequest {
    int32 routine_id = 1;
}
message RoutineResponse {
    Routine routine = 1;
}
message RoutinesRequest {
}
message RoutinesResponse {
    repeated Routine routines = 1;
}
message RoutineCreateRequest {
    Routine routine = 1;
}
message RoutineCreateResponse {
    Routine routine = 1;
}
message RoutineDeleteRequest {
    int32 routine_id = 1;
}
message RoutineDeleteResponse {
}

message Routine {
    int32 routine_id = 1;
    string name = 2;
    string source = 3;
}

message UserRequest {
    int32 user_id = 1;
}
message UserResponse {
    User user = 1;
}
message UsersRequest {
}
message UsersResponse {
    repeated User users = 1;
}
message UserCreateRequest {
    User user = 1;
}
message UserCreateResponse {
    User user = 1;
}
message UserDeleteRequest {
    int32 user_id = 1;
}
message UserDeleteResponse {
}
message UserUpdateRequest {
    User user = 1;
}
message UserUpdateResponse {
    User user = 1;
}

message User {
    int32 user_id = 1;
    string first_name = 2;
    string last_name = 3;
}
